# kiln

./: AUDIT.md  Cargo.toml  NoGraphicsApi.md  README.md
docs/: metal_checklist.md  metal_usage.md
examples/: kiln_example.rs  metal4_triangle.metal  metal4_triangle_instanced.metal  triangle_graphics.rs  triangle_mesh.rs
examples/assets/: cornell-box-copper.usda  cornell-box.usda
examples/common/: mod.rs
examples/cornell_box/: main.rs  pathtracer.rs  png.rs  raster.rs  ray_scene.rs  scene.rs
examples/cornell_box/pathtracer/: display.rs  integrator.rs  sampler.rs
examples/cornell_box/ray_scene/: display.rs  integrator.rs
examples/cornell_box/scene/: camera.rs  geometry.rs  gpu.rs  material.rs  math.rs  spectral.rs  transform.rs
examples/multi_pso/: main.rs  shader.metal
examples/triangle/: main.rs  shader.metal
examples/triangle_graphics/: main.rs
examples/triangle_instanced/: main.rs  shader.metal
examples/triangle_mesh/: main.rs
src/: accel.rs  barrier.rs  command.rs  device.rs  error.rs  lib.rs  macros.rs  memory.rs  pipeline.rs  queue.rs  renderer.rs  sampler.rs  shader.rs  surface.rs  swapchain.rs  sync.rs  texture.rs  types.rs
src/backend/: mod.rs
src/backend/metal/: accel.rs  barrier.rs  command.rs  device.rs  memory.rs  pipeline.rs  shader.rs  surface.rs  swapchain.rs  sync.rs  texture.rs
src/backend/vulkan/: accel.rs  barrier.rs  command.rs  device.rs  memory.rs  mod.rs  pipeline.rs  shader.rs  surface.rs  swapchain.rs  sync.rs  texture.rs
src/kiln/: app.rs  events.rs  metal.rs  renderer.rs  shader.rs  swapchain.rs  windowing.rs
src/kiln/app/: app.rs  mod.rs  renderer.rs  swapchain.rs  windowing.rs
src/kiln/gfx/: buffer.rs  mod.rs  shader.rs
src/kiln/metal/: argument.rs  buffer.rs  command.rs  device.rs  drawable.rs  encoder.rs  mod.rs  pass.rs  pipeline.rs  surface.rs
src/shaders/: metal4_triangle.metal
tests/: compute.rs  device.rs  graphics.rs  memory.rs  mesh.rs  raytracing.rs  textures.rs  transfer.rs
tests/common/: mod.rs
